--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "license": "MIT",
   "dependencies": {
     "peerjs": "^1.5.2",
+    "qr-scanner": "^1.4.2",
+    "qrcode": "^1.5.4",
     "three": "^0.160.0"
   },
   "devDependencies": {
