Major refactor: Transform to lightsaber game with keyphrase-based peer IDs
- Replace random strings with 6-word keyphrases + 3 numbers using niceware library
- Auto-create room on homepage load, show peer ID with copy button
- Simplified flow: enter peer ID and connect directly
- Add motion/speed detection from device motion API
- Add microphone access and audio level detection
- Transform visualization from box to lightsaber with glow effects
- Map phone motion to lightsaber swing animation
- Map microphone volume to lightsaber length
- Remove room-based discovery, use direct peer-to-peer connections

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "niceware": "^4.0.0",
     "peerjs": "^1.5.2",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
